# misis2023f-22-02-anashkin-i-a

./: .gitignore  CMakeLists.txt  codeforces.id  main.cpp  readme.md  report.md  status.md  test.cpp
lib/: CmakeLists.txt
lib/text_recognition/: text_recognition.cpp
lib/text_recognition/include/text_recognition/: text_recognition.hpp
prj.codeforces/: 1888a.cpp  1888b.cpp  1888c.cpp  1890a.cpp  CMakeLists.txt
prj.cw/: CmakeLists.txt  example.cpp  test.cpp  test_acc.cpp
prj.cw/lib/: CmakeLists.txt
prj.cw/lib/classify_blocks/: classify_blocks.cpp
prj.cw/lib/classify_blocks/include/classify_blocks/: classify_blocks.hpp
prj.cw/lib/pdf2img/include/pdf2img/: pdf2img.h
